<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/company_home_logo"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginBottom="34dp"
        android:src="@drawable/company_logo_"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.7dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <include
        android:id="@+id/include"
        layout="@layout/tabbed_layout"
        android:layout_width="0dp"
        android:layout_height="490dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_group"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.421">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/people_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5C5858" />

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/query_string"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/btn_group"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="172dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_artists"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffb43a38"
            android:text="@string/artists"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_users"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#5C5858"
            android:text="@string/users"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>